force-app/main/default/objects/Staging_Survey__c/Staging_Survey__c.object-meta.xml
<CustomObject>
    <label>Staging Survey</label>
    <nameField>
        <displayFormat>SS{000000}</displayFormat>
        <label>Staging Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>