force-app/main/default/objects/Staging_Survey__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>ERT</description>
    <label>Age</label>
    <length>6</length>
    <type>Text</type>
</CustomField>