force-app/main/default/objects/Staging_Survey__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for Surveys</description>
    <label>Community</label>
    <type>Checkbox</type>
</CustomField>