force-app/main/default/objects/Staging_Survey__c/fields/Diminished__c.field-meta.xml
<CustomField>
    <fullName>Diminished__c</fullName>
    <description>ERT</description>
    <label>Diminished</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>