force-app/main/default/objects/Staging_Survey__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>ERT</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>