force-app/main/default/objects/Staging_Survey__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>ERT</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>