force-app/main/default/objects/Staging_Survey__c/fields/Heard__c.field-meta.xml
<CustomField>
    <fullName>Heard__c</fullName>
    <description>ERT</description>
    <label>Heard</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>