force-app/main/default/objects/Staging_Survey__c/fields/Household_Id__c.field-meta.xml
<CustomField>
    <fullName>Household_Id__c</fullName>
    <description>ERT</description>
    <label>Household Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>