force-app/main/default/objects/Staging_Survey__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>ERT</description>
    <label>Impact</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>