force-app/main/default/objects/Staging_Survey__c/fields/Improve__c.field-meta.xml
<CustomField>
    <fullName>Improve__c</fullName>
    <description>ERT</description>
    <label>Improve</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>