force-app/main/default/objects/Staging_Survey__c/fields/Invite__c.field-meta.xml
<CustomField>
    <fullName>Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERT</description>
    <label>Invite</label>
    <type>Checkbox</type>
</CustomField>