force-app/main/default/objects/Staging_Survey__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>ERT</description>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>