force-app/main/default/objects/Staging_Survey__c/fields/Mission_Other__c.field-meta.xml
<CustomField>
    <fullName>Mission_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added for Surveys</description>
    <label>Mission Other</label>
    <type>Checkbox</type>
</CustomField>