force-app/main/default/objects/Staging_Survey__c/fields/Prayer_Request__c.field-meta.xml
<CustomField>
    <fullName>Prayer_Request__c</fullName>
    <description>ERT</description>
    <label>Prayer Request</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>