force-app/main/default/objects/Staging_Survey__c/fields/Process_Comment__c.field-meta.xml
<CustomField>
    <fullName>Process_Comment__c</fullName>
    <description>ERT</description>
    <label>Process Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>