force-app/main/default/objects/Staging_Survey__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>ERT</description>
    <label>Question</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>