force-app/main/default/objects/Staging_Survey__c/fields/Recommend__c.field-meta.xml
<CustomField>
    <fullName>Recommend__c</fullName>
    <description>ERT</description>
    <label>Recommend</label>
    <length>75</length>
    <type>Text</type>
</CustomField>