force-app/main/default/objects/Staging_Survey__c/fields/Recommend_Rating__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Rating__c</fullName>
    <description>ERT</description>
    <label>Recommend Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>