force-app/main/default/objects/Staging_Survey__c/fields/Salvation__c.field-meta.xml
<CustomField>
    <fullName>Salvation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ERT</description>
    <label>Salvation</label>
    <type>Checkbox</type>
</CustomField>