force-app/main/default/objects/Staging_Survey__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <description>ERT</description>
    <label>Speaker</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>