force-app/main/default/objects/Staging_Survey__c/fields/Survey_Response__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Response</label>
    <referenceTo>Survey_Response__c</referenceTo>
    <relationshipLabel>Staging Surveys</relationshipLabel>
    <relationshipName>Staging_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>