force-app/main/default/objects/Staging_Survey__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>ERT</description>
    <label>Token</label>
    <length>25</length>
    <type>Text</type>
</CustomField>