force-app/main/default/objects/Staging_Survey__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>ERT</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Mission</fullName>
            </value>
            <value>
                <fullName>Oneness</fullName>
            </value>
            <value>
                <fullName>Prayer</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>