force-app/main/default/objects/Staging_Survey__c/fields/zipcode__c.field-meta.xml
<CustomField>
    <fullName>zipcode__c</fullName>
    <description>ERT</description>
    <label>zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>