force-app/main/default/objects/Staging_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Process_Date__c</columns>
    <columns>Process_Comment__c</columns>
    <columns>Attendee_Id__c</columns>
    <columns>Event_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>